Update MongoDB URI password in .env file and add CORS_ORIGIN configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://ZainKhan77777:Passban12@cluster0.zyxjzen.mongodb.net
+MONGODB_URI=mongodb+srv://ZainKhan77777:Password%4012@cluster0.zyxjzen.mongodb.net
+CORS_ORIGIN=*
