--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "code-and-chai",
   "version": "1.0.0",
   "description": "backend project",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "zain",
@@ -20,8 +20,13 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.0.0"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   }
 }
